[package]
name = "http"
version = "0.1.0"
edition = "2021"



[dependencies]
actix-web = "=4.5.1"
actix-http = "=3.9.0"  # Pin to a compatible version to fix CI errors
quote = "1.0.35"
flash-kv = { path = ".." }

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.32.0", features = ["full"] }
surf = "2.3.2"

[dev-dependencies]
tempfile = "3.5.0"
